[gd_scene load_steps=3 format=3 uid="uid://bc565qpwg7iv4"]

[ext_resource type="Theme" uid="uid://1j0qm0ylmms6" path="res://resources/default_theme.tres" id="1_8yoh6"]
[ext_resource type="Script" path="res://scenes/menu/Stats.gd" id="1_yoa68"]

[node name="Stats" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8yoh6")
color = Color(0.0784314, 0.203922, 0.643137, 1)
script = ExtResource("1_yoa68")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="BackContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions/BackContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GLOBAL_BACK"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer"]
layout_mode = 2

[node name="EasyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EasyLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/EasyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GLOBAL_EASY_LABEL"

[node name="MediumContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MediumLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/MediumContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GLOBAL_MEDIUM_LABEL"

[node name="HardContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HardLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/HardContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GLOBAL_HARD_LABEL"

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "STATS_RESET_STATS"

[node name="ResetButtonAccept" type="AcceptDialog" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/ResetButton"]
unique_name_in_owner = true
initial_position = 5
ok_button_text = "STATS_RESET_YES"
dialog_text = "STATS_RESET_CONFIRMATION"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="confirmed" from="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/ResetButton/ResetButtonAccept" to="." method="_on_recet_button_accept_confirmed"]
